--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build-and-test:
     macos:
-      xcode: "10.2.0"
+      xcode: "13.3"
     working_directory: /Users/distiller/project
     environment:
       FL_OUTPUT_DIR: output
@@ -20,51 +20,51 @@ jobs:
       - store_test_results:
           path: output/scan
 
-  adhoc:
-    macos:
-      xcode: "10.2.0"
-    working_directory: /Users/distiller/project
-    environment:
-      FL_OUTPUT_DIR: output
-      FASTLANE_LANE: adhoc
-    shell: /bin/bash --login -o pipefail
-    steps:
-      - checkout
-      - run: bundle install
-      - run:
-          name: Fastlane
-          command: bundle exec fastlane $FASTLANE_LANE
-      - store_artifacts:
-          path: output/Game.ipa
+#   adhoc:
+#     macos:
+#       xcode: "10.2.0"
+#     working_directory: /Users/distiller/project
+#     environment:
+#       FL_OUTPUT_DIR: output
+#       FASTLANE_LANE: adhoc
+#     shell: /bin/bash --login -o pipefail
+#     steps:
+#       - checkout
+#       - run: bundle install
+#       - run:
+#           name: Fastlane
+#           command: bundle exec fastlane $FASTLANE_LANE
+#       - store_artifacts:
+#           path: output/Game.ipa
 
-  beta:
-    macos:
-      xcode: "10.2.0"
-    working_directory: /Users/distiller/project
-    environment:
-      FL_OUTPUT_DIR: output
-      FASTLANE_LANE: beta
-    shell: /bin/bash --login -o pipefail
-    steps:
-      - checkout
-      - run: bundle install
-      - run:
-          name: Fastlane
-          command: bundle exec fastlane $FASTLANE_LANE
-      - store_artifacts:
-          path: output/Game.ipa
+#   beta:
+#     macos:
+#       xcode: "10.2.0"
+#     working_directory: /Users/distiller/project
+#     environment:
+#       FL_OUTPUT_DIR: output
+#       FASTLANE_LANE: beta
+#     shell: /bin/bash --login -o pipefail
+#     steps:
+#       - checkout
+#       - run: bundle install
+#       - run:
+#           name: Fastlane
+#           command: bundle exec fastlane $FASTLANE_LANE
+#       - store_artifacts:
+#           path: output/Game.ipa
 
 workflows:
   version: 2
   build-test-adhoc:
     jobs:
       - build-and-test
-      - adhoc:
-          filters:
-            branches:
-              only: master
-          requires:
-            - build-and-test
+#       - adhoc:
+#           filters:
+#             branches:
+#               only: master
+#           requires:
+#             - build-and-test
       #- beta:
           #filters:
             #branches:
